# FilaViva

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: schemas.py
backend/api/routers/: demo.py  methodology.py  scenarios.py  simulations.py
backend/data/: demo_results.json  demo_scenario.json  methodology.json
backend/engine/: generator.py  metrics.py  risk_score.py  simulator.py
backend/tests/: test_engine.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT.md  HANDOFF.md  SECURITY_NOTES.md  TECHNICAL_DECISIONS.md  TESTING.md  assumptions.md  methodology.md  portfolio-case-study.md
frontend/: .env.example  .env.production  package-lock.json  package.json
frontend/public/demo/: snapshot.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/comparison/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/executive-brief/: page.tsx
frontend/src/app/lab/: page.tsx
frontend/src/app/methodology/: page.tsx
frontend/src/app/queue-timeline/: page.tsx
frontend/src/app/risk-reliability/: page.tsx
frontend/src/app/scenario-builder/: page.tsx
frontend/src/app/simulation-results/: page.tsx
frontend/src/components/: ComparisonView.tsx  KpiCard.tsx  ResultsCharts.tsx  RiskBreakdown.tsx  RiskGauge.tsx  RunDashboard.tsx  ScenarioForm.tsx  StateBlock.tsx
frontend/src/components/layout/: Header.tsx  LabBanner.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: generate_demo.py  generate_public_snapshot.py
